RESOLVED FIXED75150
DFG CFA sometimes generates an incorrect proof that a node is known to be a typed array
https://bugs.webkit.org/show_bug.cgi?id=75150
Summary DFG CFA sometimes generates an incorrect proof that a node is known to be a t...
Filip Pizlo
Reported 2011-12-22 16:12:57 PST
Patch forthcoming.
Attachments
the patch (518.01 KB, patch)
2011-12-22 16:18 PST, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2011-12-22 16:13:23 PST
Filip Pizlo
Comment 2 2011-12-22 16:18:52 PST
Created attachment 120403 [details] the patch
Filip Pizlo
Comment 3 2011-12-22 16:28:04 PST
Note You need to log in before you can comment on or make changes to this bug.