DFG CFA sometimes generates an incorrect proof that a node is known to be a typed array https://bugs.webkit.org/show_bug.cgi?id=75150 <rdar://problem/10621900>

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

* dfg/DFGAbstractState.cpp:
(JSC::DFG::AbstractState::execute):

LayoutTests:

* fast/js/dfg-float32array-expected.txt: Added.
* fast/js/dfg-float32array.html: Added.
* fast/js/dfg-int32array-expected.txt: Added.
* fast/js/dfg-int32array.html: Added.
* fast/js/script-tests/dfg-float32array.js: Added.
(getter1):
(setter1):
(getter2):
(setter2):
(getter3):
(setter3):
(getter4):
(setter4):
(getters.getter1.a):
(.a):
(setters.setter1.a):
(safeGetter):
(safeSetter):
* fast/js/script-tests/dfg-int32array.js: Added.
(getter1):
(setter1):
(getter2):
(setter2):
(getter3):
(setter3):
(getter4):
(setter4):
(getters.getter1.a):
(.a):
(setters.setter1.a):
(safeGetter):
(safeSetter):



Canonical link: https://commits.webkit.org/91902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103594 268f45cc-cd09-0410-ab3c-d52691b4dbfc